# mcwb

./: .copier-answers.yml  .gitignore  Jenkinsfile  README.md  catalog-info.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sonar-project.properties  switcher.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  code.yml
0.3.0b1/: .buildinfo  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  tutorials.html
0.3.0b1/.doctrees/: genindex.doctree  index.doctree  tutorials.doctree
0.3.0b1/.doctrees/how-to/: contribute.doctree  run-container.doctree
0.3.0b1/.doctrees/reference/: api.doctree
0.3.0b1/.doctrees/tutorials/: installation.doctree
0.3.0b1/_sources/reference/: api.md.txt
0.3.0b1/explanations/decisions/: 0002-switched-to-python-copier-template.html
0.3.0b1/how-to/: contribute.html  run-container.html
0.3.0b1/reference/: api.html
0.3.0b2/: explanations.html  search.html  searchindex.js
0.3.0b2/.doctrees/: explanations.doctree  how-to.doctree  reference.doctree
0.3.0b2/.doctrees/explanations/: decisions.doctree
0.3.0b2/.doctrees/reference/: api.doctree
0.3.0b2/_sources/how-to/: run-container.md.txt
0.3.0b2/_sources/tutorials/: installation.md.txt
0.3.0b2/_static/: documentation_options.js
0.3.0b2/explanations/: decisions.html
0.3.0b2/explanations/decisions/: 0001-record-architecture-decisions.html
0.3.0b2/tutorials/: installation.html
docs/: conf.py
docs/source/: conf.py  index.rst  installation.rst  mcwb.rst
mcwb/: __init__.py  api.py  blocks.py  functions.py  itemlists.py  polygon.py  types.py  volume.py
src/mcwb/: __init__.py  __main__.py  api.py  blocks.py  functions.py  itemlists.py  polygon.py  types.py  volume.py
tests/: mockclient.py  test_blocks.py  test_cli.py  test_functions.py  test_itemlists.py  test_poly.py  test_volume.py
tests/cubes/: RGB.cube  RGB.txt  RGBrotateXY1.cube  RGBrotateXY2.cube  RGBrotateXY3.cube  RGBrotateXZ1.cube  RGBrotateYZ1.cube  poly.cube  polyfill.cube
(+2 files in other folders)
