[metadata]
name = mcwb
description = A Minecraft world builder library.
url = https://github.com/conqp/mcwb
author = Richard Neumann
author_email = mail@richard-neumann.de
license = GPLv3
long_description = file: README.md
long_description_content_type = text/markdown
keywords = minecraft world builder python rcon
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.9

[options]
packages = find:

install_requires =
    numpy
    mcwb

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests

[options.extras_require]
# For development tests/docs
dev =
    black==21.10b0
    isort
    pytest-cov
    pytest-mypy
    flake8<3.9.3
    pytest-flake8
    pytest-black
    flake8-isort
    sphinx-rtd-theme-github-versions
    importlib-metadata
    docker


# If you want to include data files in packages,
# either define [options.package_data] or
# set this to True and include a MANIFEST.in file.
include_package_data = False

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true
skip=setup.py,conf.py,build

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203, # See https://github.com/PyCQA/pycodestyle/issues/373
    F811, # support typing.overload decorator
    F722, # allow Annotated[typ, some_func("some string")]
# exclude =

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    # add --black to the following for code style checks
    --tb=native -vv --flake8 --mypy --doctest-modules --doctest-glob="*.rst"
    # comment the following line to enable debugging and uncomment for coverage reports
    # --cov=mciwb --cov-report term --cov-report xml:cov.xml --ignore tests/converter

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py
